--- a/index.html
+++ b/index.html
@@ -6,16 +6,13 @@
   <title>MAK's Mobile Details</title>
   <meta name="description" content="Mobile car detailing that comes to you. Ceramic coatings, interior deep clean, wash and wax. Serving your area." />
   <link rel="stylesheet" href="styles.css" />
-  <link rel="icon" href="assets/images/optimized/logo-64.webp" type="image/webp" />
+  <link rel="icon" href="assets/images/qVM5h4DTtg29Nmmz7D741.jpeg" type="image/jpeg" />
 </head>
 <body>
   <header class="site-header">
     <div class="container header-inner">
       <a class="logo" href="#home">
-        <picture>
-          <source type="image/webp" srcset="assets/images/optimized/logo-64.webp 64w, assets/images/optimized/logo-128.webp 128w" sizes="64px">
-          <img src="assets/images/optimized/logo-128.jpg" alt="MAK'S MOBILE DETAILS logo" class="logo-img">
-        </picture>
+        <img src="assets/images/qVM5h4DTtg29Nmmz7D741.jpeg" alt="MAK'S MOBILE DETAILS logo" class="logo-img">
       </a>
       <button id="navToggle" class="nav-toggle" aria-label="Toggle navigation">☰</button>
       <nav id="siteNav" class="nav">
@@ -44,15 +41,7 @@
           </ul>
         </div>
         <div class="hero-image" aria-hidden="true">
-          <picture>
-            <source type="image/webp"
-              srcset="assets/images/optimized/hero-640.webp 640w, assets/images/optimized/hero-1024.webp 1024w, assets/images/optimized/hero-1600.webp 1600w"
-              sizes="(max-width:600px) 100vw, 600px">
-            <source type="image/jpeg"
-              srcset="assets/images/optimized/hero-1024.jpg 1024w"
-              sizes="(max-width:600px) 100vw, 600px">
-            <img src="assets/images/optimized/hero-1024.jpg" alt="Front interior showing dashboard and seats" class="hero-photo" loading="lazy">
-          </picture>
+          <img src="assets/images/vVpX1me4oo8TtYtrv7kV1.jpeg" alt="Front interior showing dashboard and seats" class="hero-photo" loading="lazy">
         </div>
       </div>
     </section>
@@ -83,14 +72,14 @@
         <h2>Before and After Gallery</h2>
         <p class="section-sub">Examples from recent mobile details.</p>
         <div class="gallery-grid">
-          <button class="img-card" data-base="door1" aria-label="Open image door1">
-            <img src="assets/images/optimized/door1-320.webp" alt="Driver side door panel with armrest and storage" loading="lazy">
+          <button class="img-card" data-src="assets/images/Phh5yDZhtvaLUzywogcow.jpeg" aria-label="Open image 1">
+            <img src="assets/images/Phh5yDZhtvaLUzywogcow.jpeg" alt="Driver side door panel with armrest and storage" loading="lazy">
           </button>
-          <button class="img-card" data-base="door2" aria-label="Open image door2">
-            <img src="assets/images/optimized/door2-320.webp" alt="Driver side door panel with speaker and wear" loading="lazy">
+          <button class="img-card" data-src="assets/images/Cv2U93h3BvkHmaGiwfLhx.jpeg" aria-label="Open image 2">
+            <img src="assets/images/Cv2U93h3BvkHmaGiwfLhx.jpeg" alt="Driver side door panel with speaker and wear" loading="lazy">
           </button>
-          <button class="img-card" data-base="hero" aria-label="Open image interior">
-            <img src="assets/images/optimized/hero-320.webp" alt="Front interior showing dashboard and seats" loading="lazy">
+          <button class="img-card" data-src="assets/images/vVpX1me4oo8TtYtrv7kV1.jpeg" aria-label="Open image 3">
+            <img src="assets/images/vVpX1me4oo8TtYtrv7kV1.jpeg" alt="Front interior showing dashboard and seats" loading="lazy">
           </button>
         </div>
       </div>
@@ -185,10 +174,7 @@
     <div class="container footer-inner">
       <div>© <span id="year"></span> MAK's Mobile Details</div>
       <div class="footer-logo">
-        <picture>
-          <source type="image/webp" srcset="assets/images/optimized/logo-64.webp 64w, assets/images/optimized/logo-128.webp 128w">
-          <img src="assets/images/optimized/logo-128.jpg" alt="MAK'S MOBILE DETAILS logo" class="footer-logo-img">
-        </picture>
+        <img src="assets/images/qVM5h4DTtg29Nmmz7D741.jpeg" alt="MAK'S MOBILE DETAILS logo" class="footer-logo-img">
       </div>
     </div>
   </footer>
@@ -201,5 +187,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-
